--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,7 @@
 		{
 			"label": "Cython Build",
 			"type": "shell",
-			"command": "python ${file} build_ext --inplace",
-			"options": {
-				"cwd": "${fileDirname}"
-			},
+			"command": "python ./setup.py build_ext --inplace",
 			"problemMatcher": []
 		}
 	]
