--- a/.github/workflows/run-unittest-on-pr-open.yaml
+++ b/.github/workflows/run-unittest-on-pr-open.yaml
@@ -26,7 +26,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
           pip install boto3
+      - name: Build Cython project
+        run: |
+          python ./setup.py build_ext --inplace
       - name: Test with unittest
         run: |
-          cd request_handler
           python -m unittest discover -s ./test  -p '*_test.py'
