--- a/.github/workflows/run-unittest-on-pr-open.yaml
+++ b/.github/workflows/run-unittest-on-pr-open.yaml
@@ -31,4 +31,4 @@ jobs:
           python ./setup.py build_ext --inplace
       - name: Test with unittest
         run: |
-          python -m unittest discover -s ./test  -p '*_test.py'
+          python -m unittest discover -s tests --p '*_test.py'
