--- a/.github/workflows/run-unittest-on-pr-open.yaml
+++ b/.github/workflows/run-unittest-on-pr-open.yaml
@@ -27,7 +27,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
           pip install boto3
-      - name: Build Cython project
+      - name: Build mypy package
         run: |
           python ./setup.py build_ext --inplace
       - name: Test with unittest
