--- a/.github/workflows/run-unittest-on-pr-open.yaml
+++ b/.github/workflows/run-unittest-on-pr-open.yaml
@@ -1,13 +1,14 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: ci-python-unittest
+name: python-test
 
 on:
   pull_request:
-    types: [review_requested, opened]
+    types: [review_requested, opened, synchronize, reopened]
     branches: [dev, main]
   workflow_dispatch:
+    inputs:
+      rerun:
+        description: 'Rerun the workflow'
+        required: false
 
 jobs:
   build:
@@ -16,20 +17,26 @@ jobs:
       matrix:
         python-version: [3.11]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip' # caching pip dependencies
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
-          pip install boto3
+        env:
+          PIP_CACHE_DIR: ${{ runner.workspace }}/pip-cache
+
       - name: Build mypy package
         run: |
           python ./setup.py build_ext --inplace
+
       - name: Test with unittest
         run: |
           python -m unittest discover -s tests --p '*_test.py'
